--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ google-services = "4.3.15"
 
 firebase-android-bom = "32.3.1"
 firebase-android-crashlytics = "2.9.9"
+firebase-android-analytics = "21.5.0"
 
 androidx-core-ktx = "1.10.1"
 androidx-lifecycle = "2.6.1"
@@ -120,6 +121,12 @@ koin-androidx-navigation = { module = "io.insert-koin:koin-androidx-navigation",
 koin-androidx-workmanager = { module = "io.insert-koin:koin-androidx-workmanager", version.ref = "koin-android" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin-core" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin-test" }
+
+firebase-android-core = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-android-bom" }
+firebase-android-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx" }
+firebase-android-analytics = { module = "com.google.firebase:firebase-analytics-ktx", version.ref = "firebase-android-analytics" }
+firebase-android-messaging = { module = "com.google.firebase:firebase-messaging-ktx" }
+
 
 [bundles]
 app-ui = [
