--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,11 @@ versionName = "0.0.1"
 realm = "1.9.0"
 google-services = "4.3.15"
 
+datastore = "1.1.0-dev01"
+kotlinx-coroutines = "1.7.3"
+kotlinx-serialization = "1.5.1"
+kotlinx-datetime = "0.4.1"
+
 firebase-android-bom = "32.3.1"
 firebase-android-crashlytics = "2.9.9"
 firebase-android-analytics = "21.5.0"
@@ -79,6 +84,8 @@ gradle-plugin-navigation-safeArgs = { module = "androidx.navigation:navigation-s
 gradle-plugin-realm = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
 gradle-plugin-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "gradle-plugin-spotless" }
 
+datastore = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
+
 accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
 accompanist-navigation-material = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
@@ -127,6 +134,13 @@ firebase-android-crashlytics = { module = "com.google.firebase:firebase-crashlyt
 firebase-android-analytics = { module = "com.google.firebase:firebase-analytics-ktx", version.ref = "firebase-android-analytics" }
 firebase-android-messaging = { module = "com.google.firebase:firebase-messaging-ktx" }
 
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+kotlin-stdlib-jdk = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
+kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 
 [bundles]
 app-ui = [
