--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,6 +49,7 @@ android-compose-lootie = "6.1.0"
 
 coil = "2.4.0"
 coil-landscapist = "2.2.12"
+ktor = "2.3.3"
 
 koin-android = "3.4.3"
 koin-androidx-compose = "3.4.6"
@@ -142,6 +143,14 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 
+ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
+ktor-client-contentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+ktor-client-okHttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+
 [bundles]
 app-ui = [
     "accompanist-navigation-animation",
@@ -170,11 +179,12 @@ app-ui = [
     "coil-landscapist-transformation"
 ]
 
-#ktor-common = [
-#    "ktor-client-auth",
-#    "ktor-client-contentNegotiation",
-#    "ktor-client-core",
-#    "ktor-client-logging",
-#    "ktor-client-serialization",
-#    "ktor-serialization-kotlinx-json"
-#]
+ktor-common = [
+    "ktor-client-auth",
+    "ktor-client-contentNegotiation",
+    "ktor-client-core",
+    "ktor-client-logging",
+    "ktor-client-okHttp",
+    "ktor-client-serialization",
+    "ktor-serialization-kotlinx-json"
+]
