--- a/activity/src/main/AndroidManifest.xml
+++ b/activity/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
             android:name="activity.MainActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
